# agentstamp

./: .gitignore  CLA.md  CLAUDE.md  LICENSE  README.md  glama.json  instrument.js  mcp-stdio.js  package-lock.json  package.json  server.js  server.json  smithery.yaml  vitest.config.js
action/: README.md  action.yml  package-lock.json  package.json
discovery/: agent-card.json  directory-submissions.md  listing-content.md  mcp.json
public/: ai.txt  index.html  llms-full.txt  spec.html
scripts/: add-shippingrates.js  audit.sh  backend-launchd.sh  bazaar-activate-all.js  cleanup-e2e.js  db-quality-check.js  deploy.sh  moltbook-engage.sh  moltbook-karma-strategy.md  moltbook-launchd.sh  moltbook-post-templates.md  moltbook-product-knowledge.md  moltbook-scheduler.js  refresh-ofac-sdn.sh  register-erc8004.js  research-intel-agentstamp.md  research-intel-shippingrates.md  research-scout-launchd.sh  research-scout-review-launchd.sh  research-scout-review.sh  research-scout.sh  seed-demo.js  smoke-test.sh  start-web.sh
sdk/: express.js  index.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/agentstamp/: __init__.py  client.py
src/: config.js  constants.js  crypto.js  dataQualityChecks.js  database.js  erc8004.js  eventLog.js  hashChain.js  insights.js  mcp-server.js  passport.js  queries.js  reputation.js  reputationMonitor.js  walletAuth.js  webhookDispatcher.js
tests/: blindVerification.test.js  dataQualityChecks.test.js  eventLog.test.js  hashChain.test.js  helpers.js  leaderboardLive.test.js  momentum.test.js  reputationMonitor.test.js  (+7 more)
(+112 files in other folders)
