[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentstamp"
version = "1.3.0"
description = "Python SDK for AgentStamp — trust verification, identity stamps, and reputation scoring for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Vinay Bhosle", email = "vinay@agentstamp.org" },
]
keywords = [
    "ai-agents",
    "trust",
    "identity",
    "verification",
    "x402",
    "mcp",
    "reputation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://agentstamp.org"
Repository = "https://github.com/vinaybhosle/agentstamp"
Documentation = "https://github.com/vinaybhosle/agentstamp#readme"
Issues = "https://github.com/vinaybhosle/agentstamp/issues"
